# python-template

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  AGENT_DOCS_CONTRACT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  QUICKSTART.md  QUICK_REFERENCE.md  README.md  WORKFLOW_ENHANCEMENTS.md  bandit-report.json  pyproject.toml  pyrightconfig.json
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.github/agents/: README.md  architecture.md  debug.md  documentation.md  test.md
.github/scripts/: check_coverage.py  smart_test_selection.py
.github/workflows/: ci.yml  code-quality.yml  dependency-review.yml  docs.yml  nightly.yml  pr.yml  release.yml  reusable-setup.yml
agent-plans/test-plan/: plan.md
agent-projects/: README.md  doc-update-implementation-summary.md  doc-update-project.md
agent-tmp/: README.md
docs/: CHANGELOG.md  CONTEXT.md  README.md  SPACE_HULK_BACKPORT.md  SUMMARY.md  WORKFLOWS.md  facts.json
docs/_generated/: plans_index.md
docs/_generated/api/src/python_template/: calculator.html  greeter.html  index.html
src/python_template/: __init__.py  calculator.py  greeter.py
tests/: conftest.py  test_build_context.py  test_calculator.py  test_greeter.py  test_smart_selection.py
tools/: build_context.py
